@@ -1,2 +1,0 @@
-include $(top_srcdir)/build-aux/init.mk
-include libport.mk
