@@ -1,71 +1,0 @@
-# This file expects to be included by the Makefile.am of the
-# directory that contains libport/ headers.
-
-# C headers.
-nobase_libport_include_base_HEADERS =		\
-	libport/cstdio				\
-	libport/cstring				\
-	libport/unistd.h
-
-# C++ headers.
-nobase_libport_include_base_HEADERS +=		\
-	libport/assert.hh			\
-	libport/cli.hh				\
-	libport/cli.hxx				\
-	libport/compiler.hh			\
-	libport/containers.hh			\
-	libport/containers.hxx			\
-	libport/contract.hh			\
-	libport/deref.hh			\
-	libport/deref.hxx			\
-	libport/detect_win32.h			\
-	libport/hash.hh				\
-	libport/indent.hh			\
-	libport/escape.hh			\
-	libport/escape.hxx			\
-	libport/exception.hh			\
-	libport/exception.hxx			\
-	libport/file-system.hh			\
-	libport/fwd.hh				\
-	libport/hash.hh				\
-	libport/lockable.hh			\
-	libport/network.h			\
-	libport/package-info.hh			\
-	libport/pair.hh				\
-	libport/pair.hxx			\
-	libport/program-name.hh			\
-	libport/ref-pt.hh			\
-	libport/sched.hh			\
-	libport/select-const.hh			\
-	libport/select-ref.hh			\
-	libport/semaphore.hh			\
-	libport/semaphore.hxx			\
-	libport/separator.hh			\
-	libport/separator.hxx			\
-	libport/shared-ptr.hh			\
-	libport/shared-ptr.hxx			\
-	libport/singleton-ptr.hh		\
-	libport/symbol.hh			\
-	libport/symbol.hxx			\
-	libport/sysexits.hh			\
-	libport/thread.hh			\
-	libport/tokenizer.hh			\
-	libport/uffloat.hh			\
-	libport/ufloat.h			\
-	libport/ufloat.hh			\
-	libport/ull-fixed-point.hh		\
-	libport/ulong-fixed-point.hh		\
-	libport/utime.hh			\
-	libport/windows.hh
-
-# sys/ headers
-nobase_libport_include_base_HEADERS +=		\
-        libport/sys/stat.h
-
-
-# Generated headers.
-nodist_libport_include_base_HEADERS =		\
-	libport/config.h
-
-
-CLEANFILES += libport/config.h
